# luke-desktop

./: .gitignore  CHANGELOG.md  CHECKLIST.md  CONTRIBUTING.md  INSTRUCTIONS.md  LICENSE  PROJECT_INDEX.md  PROMPT.md  README.md  SECURITY.md  SETUP.md  check_dependencies.bat  init-project.bat  move-files.bat  ollama_integration.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: mcp.json
docs/: API_VERSIONING.md  ARCHITECTURE.md  BUILD.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  DOCUMENTATION_MAP.md  MCP_PROTOCOL.md  TROUBLESHOOTING.md  USER_GUIDE.md  api.md  code-highlighting.md  performance.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: anthropic.rs  attachments.rs  auth.rs  file_handler.rs  lib.rs  main.rs  project.rs
src-tauri/src/db/: chat.rs  schema.sql
src-tauri/src/mcp/: commands.rs  config.rs  mod.rs  types.rs
src/components/: AttachmentExample.tsx  ChatContainer.tsx  ClaudeChat.tsx  ClaudeMessage.tsx  CodeTest.tsx  FileAttachment.tsx  FilePreview.tsx  MCPTest.tsx  MarkdownRenderer.tsx  SystemPromptManager.tsx  TokenCounter.tsx
src/components/Markdown/: CodeBlock.tsx  index.tsx
src/components/ProjectManagement/: ProjectDetails.tsx  (+3 more)
src/hooks/: index.ts  useAnthropic.ts  useAuth.tsx  useChat.ts  useChatSearch.ts  useChatTemplates.ts  useClaudeAI.ts  useConversationAttachments.ts  useConversationContext.ts  useFileAttachment.ts  useLanguageDetection.ts  useMCP.ts  useMCPServer.ts  useProject.ts  useTokenEstimation.ts
src/lib/: codeBlockConfig.ts  languageDetection.ts  syntaxThemes.ts
src/styles/: syntax.css
src/types/: chat.ts  message.ts
src/utils/: format.ts
tests/: setup.ts
(+36 files in other folders)
